// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Snapshots default snapshot render 1`] = `
<div
  className="sc-iBPTik eXxKsk"
  data-test="grid-grid"
>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION1
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION2
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        Lorem
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION3
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        ipsum
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION4
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 1234567 1234567 1234567 1234567 1234567 1234567 1234567 1234567
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION5
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        qwertyu asdfdgg zcxvbvn aesdg qewrte zcxxvc
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION6
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 test123 test123 test123 test123  test123 test123 test123 test123
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION7
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 123 123 123 123 123
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snapshots with custom dataPrefix snapshot render 1`] = `
<div
  className="sc-iBPTik eXxKsk"
  data-test="dataTestPrefix-grid"
>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION1
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION2
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        Lorem
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION3
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        ipsum
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION4
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 1234567 1234567 1234567 1234567 1234567 1234567 1234567 1234567
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION5
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        qwertyu asdfdgg zcxvbvn aesdg qewrte zcxxvc
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION6
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={false}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 test123 test123 test123 test123  test123 test123 test123 test123
      </div>
    </div>
  </div>
  <div
    className="sc-fubCzh kPWXjr"
  >
    <div
      className="sc-bdfBQB fINfZT"
      data-test="card-card"
    >
      <div
        className="sc-gsTEea bMmgDr"
      >
        <span
          className="sc-dlfnuX cvZFiX"
          data-test="card-card-title"
        >
          SUBSCRIPTION7
        </span>
        <div
          className="sc-eCstlR jXyqPy"
        >
          <input
            checked={true}
            className="sc-gKseQn gLUVYz"
            type="checkbox"
          />
          <label
            className="sc-jSgvzq iZDWJJ"
            htmlFor="checkbox"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="sc-hKgJUU dbFtMW"
        data-test="card-card-content"
      >
        1234567 123 123 123 123 123
      </div>
    </div>
  </div>
</div>
`;
